cabal-version:      2.4
name:               HTMell
version:            0.1.0.0
synopsis:           Minimal filesystem powered markdown content management system
-- description:
homepage:           https://github.com/memowe/HTMell
bug-reports:        https://github.com/memowe/HTMell/issues
license:            MIT
license-file:       LICENSE
author:             Mirko Westermeier
maintainer:         mirko@westermeier.de

category:           Web
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
    build-depends:    base ^>=4.12.0.0
    hs-source-dirs:   src-lib
    default-language: Haskell2010

test-suite HTMell-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.12.0.0
