cabal-version:      2.4
name:               HTMell
version:            0.1.0.0
synopsis:           Minimal filesystem powered markdown content management system
homepage:           https://github.com/memowe/HTMell
bug-reports:        https://github.com/memowe/HTMell/issues
license:            MIT
license-file:       LICENSE
author:             Mirko Westermeier
maintainer:         mirko@westermeier.de

category:           Web
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        HTMell.Tree,
        HTMell.Tree.Load,
        HTMell.Content,
        HTMell.Util
    build-depends:
        base,
        containers,
        split,
        control-bool,
        filepath,
        directory,
        text
    hs-source-dirs:   src-lib
    default-language: Haskell2010

test-suite HTMell-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    other-modules:
        HTMell.TestTree,
        HTMell.TestContent,
        HTMell.TestUtil
        HTMell.Test.Util
    hs-source-dirs:   test
    main-is:          tests.hs
    build-depends:
        base,
        tasty,
        tasty-hunit,
        HTMell,
        containers,
        directory,
        filepath,
        text,
        random
