name:                HTMell
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Mirko Westermeier
maintainer:          mirko@westermeier.de
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     HTMell.Content
  build-depends:       base >=4.9 && <4.10, filepath >=1.4 && <1.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  
