name:                HTMell
version:             0.1.0.0
synopsis:            Markdown content from file system
homepage:            https://github.com/memowe/HTMell
license:             MIT
license-file:        LICENSE
author:              Mirko Westermeier
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     HTMell.Content
  build-depends:       base >=4.9 && <5, filepath, regex-pcre
  hs-source-dirs:      src
  default-language:    Haskell2010
  
