name:                HTMell
version:             0.1.0.0
synopsis:            Markdown content from file system
homepage:            https://github.com/memowe/HTMell
license:             MIT
license-file:        LICENSE
author:              Mirko Westermeier
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    HTMell.Path
  build-depends:       base >=4.9 && <5, split
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite test-htmell
  type:             exitcode-stdio-1.0
  build-depends:    base, HTMell
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
